--- a/app/globals.css
+++ b/app/globals.css
@@ -25,8 +25,6 @@
   --color-input: var(--input);
   --color-border: var(--border);
   --color-destructive: var(--destructive);
-  /* --color-accent-foreground: var(--accent-foreground); */
-  /* --color-accent: var(--accent); */
   --color-muted-foreground: var(--muted-foreground);
   --color-muted: var(--muted);
   --color-secondary-foreground: var(--secondary-foreground);
@@ -57,8 +55,6 @@
   --secondary-foreground: oklch(0.208 0.042 265.755);
   --muted: oklch(0.968 0.007 247.896);
   --muted-foreground: oklch(0.554 0.046 257.417);
-  /* --accent: oklch(0.968 0.007 247.896); */
-  /* --accent-foreground: oklch(0.208 0.042 265.755); */
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.929 0.013 255.508);
   --input: oklch(0.929 0.013 255.508);
@@ -91,8 +87,6 @@
   --secondary-foreground: oklch(0.984 0.003 247.858);
   --muted: oklch(0.279 0.041 260.031);
   --muted-foreground: oklch(0.704 0.04 256.788);
-  /* --accent: oklch(0.279 0.041 260.031); */
-  /* --accent-foreground: oklch(0.984 0.003 247.858); */
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
@@ -186,6 +180,14 @@
     font-size: 20px;
   }
 
+  .text-outline {
+    -webkit-text-stroke: 1px #ffffff;
+  }
+
+  .text-outline-hover {
+    -webkit-text-stroke: 1px #11b5e4;
+  }
+
   @media (min-width: 1280px) {
     .h1 {
       font-size: 80px;
@@ -197,4 +199,16 @@
       font-size: 24px;
     }
   }
+}
+
+.group:hover .group-hover\:text-accent {
+  color: var(--color-accent);
+}
+
+.group:hover .group-hover\:text-outline-hover {
+  color: var(--color-accent);
+}
+
+.group:hover .group-hover\:bg-accent {
+  background-color: var(--color-accent);
 }
