--- a/app/globals.css
+++ b/app/globals.css
@@ -216,3 +216,26 @@
 .container {
   width: 80vw;
 }
+
+/* For WebKit browsers */
+.y-scrollable::-webkit-scrollbar {
+  width: 8px;
+}
+
+.y-scrollable::-webkit-scrollbar-track {
+  background: #001021; /* same as dialog background */
+  border-radius: 8px;
+}
+
+.y-scrollable::-webkit-scrollbar-thumb {
+  background-color: #555; /* scrollbar handle color */
+  border-radius: 8px;
+  border: 2px solid #001021; /* same as background to add padding effect */
+}
+
+/* For Firefox */
+.y-scrollable {
+  scrollbar-width: thin;
+  scrollbar-color: #555 #001021;
+}
+
