Made the info correct, optimize things, resolve issues and integrate nodemailer

--- a/app/globals.css
+++ b/app/globals.css
@@ -223,14 +223,14 @@
 }
 
 .y-scrollable::-webkit-scrollbar-track {
-  background: #001021; /* same as dialog background */
+  background: #001021; 
   border-radius: 8px;
 }
 
 .y-scrollable::-webkit-scrollbar-thumb {
-  background-color: #555; /* scrollbar handle color */
+  background-color: #555; 
   border-radius: 8px;
-  border: 2px solid #001021; /* same as background to add padding effect */
+  border: 2px solid #001021; 
 }
 
 /* For Firefox */
